# UAVTR

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  cam.urdf  compile.sh  control.ipynb  cube.ipynb  detr_demo.py  estimation_accm.ipynb  explore.py  explore_sim.py  export.py  repub.py  run.cpp  velocity.ipynb
assets/: cam.urdf
detection/src/: main.cpp  yolo.cpp
docs/: gz_px4.md
launch/: est_launch.py  launch_all.py  madgwick.launch.py  real_bag.launch.py  sim_bag.launch.py
notebooks/: assess_perf.py  attitude.py  bag_explore.py  bov.py  cube_bundle.ipynb  cube_cam_vel.ipynb  cude_bundle.ipynb  debugflow.py  dense_flow.py  estimation.ipynb  estimation_3d.ipynb  estimation_accm.ipynb  estimation_nn.ipynb  explore.py  explore_jug.py  groundup.py  imu_explore.py  loftr.py  omega_playground.py  opt.py  optflow_vel copy.py  optflow_vel.py  pos_meas.ipynb  record_state.py  sand.ipynb  sandbox.py  test.py  toy_estimation.ipynb  toy_kf.ipynb
panda/: kill.sh  launch.sh  pub_ros_time.py  pub_tf.py  record.sh  rs_launch.py  setup.sh  system_launch.py  test_data_reception.py
scripts/: assess_perf.py  attitude.py  bag_explore.py  kill.sh  launch.sh  lowpass_design.py  opt_kf.py  optflow_vel.py  proc_stats.py  pub_tf.py  record.sh  record_launch.py  record_pi.sh  record_state.py  rs_launch.py  sandbox.py  setup.sh  synchtime.sh  synchtime_pi.sh  system_launch.py  target_position.ipynb  test_data_reception.py  time  toy_kf.ipynb  upload.sh  upload_pi.sh  xrce.sh
src/: main.cpp  tracker.cpp  yolo.cpp
src/detection/: CMakeLists.txt  package.xml
src/detection/detr/: detr_demo.py  export.py
src/detection/include/: timer.hpp
src/detection/src/: main.cpp  ros_node.cpp  tracker.cpp  tracker_ros_node.cpp  yolo.cpp
src/detection/test/: test_tracker.cpp
src/estimation/: CMakeLists.txt
src/estimation/include/: angvel_accum.hpp  eigen_ridge.hpp  estimator.hpp  estimator_ros.hpp  estimator_ros_node.hpp  kalman.hpp  lpfilter.hpp  stamped_buff.hpp
src/estimation/src/: estimator.cpp  estimator_ros.cpp  estimator_ros_node.cpp  filter.cpp  imu_repub.cpp  kalman.cpp  main.cpp  orient_filter.cpp  ros_node.cpp  vo.cpp
src/estimation/test/: bbox.py  flowinfo.txt  preprocess_test_data.py  test_flow_velocity.cpp
test/: test_tracker.cpp
